# FEM-on-2D-membrane

./: .gitignore  FEM_circle.py  FEM_linear.py  README.md  coefficients.py  main.py  meshtest.py  pyproject.toml
circlyboi/: FEM_circle.py  FEM_linear.py  main.py  parse_func.py
oldsrc/: main.py  old_main.py  params.txt  solutions.py
src/: FEM_circle.py  FEM_linear.py  parse_func.py  wave_main.py
tools/: FEM_methods.py  parse.py
