[project]
name = "fem-on-2d-membrane"
version = "0.1.0"
description = "wave equation using FEM"
authors = [
    {name = "Matthew Bradley",email = "matthewbradley2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "meshpy (>=2022.1.3,<2023.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "commitizen (>=4.2.1,<5.0.0)",
    "numexpr (>=2.10.2,<3.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
